# polars_fs_ops

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODEOWNERS  Cargo.toml  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yaml
.github/workflows/: ci.yml  complexity-checks.yml  quality-checks-and-tests.yml  run-tests.yml  style-checks.yml
polars_fs_ops/: __init__.py  typing.py
src/: expressions.rs  fs_checks.rs  fs_ops.rs  lib.rs
src/utils/: mod.rs
tests/: test_fs_ops.py
