[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=1.3.0"]
build-backend = "maturin"

[project]
name = "polars-fs-ops"
description = "A collection of file system operations implemented in Rust and exposed to Python via Polars."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "complexipy>=5.2.0",
    "detect-secrets>=1.5.0",
    "develop>=0.2.1",
    "docstr-coverage>=2.3.2",
    "maturin>=1.12.6",
    "mypy>=1.14.1",
    "polars>=1.8.2",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[tool.maturin]
module-name = "polars_fs_ops._internal"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.complexipy]
paths = ["polars_fs_ops/", "tests/"]
max-complexity-allowed = 20
snapshot-create = false
snapshot-ignore = false
quiet = false
ignore-complexity = false
failed = false
color = "auto"
sort = "asc"
exclude = []
output-csv = false
output-json = false

[[tool.mypy.overrides]]
module = "polars.utils.udfs"
ignore_missing_imports = true
